@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.8-11
-Date: 2012-07-03
+Date: 2012-07-09
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
