@@ -67,6 +67,7 @@ export("+.section",
        "heading<-",
        julianDay,
        julianCenturyAnomaly,
+       plotPolar,
        plotTaylor,
        processingLog,
        "processingLog<-",
